# user-microservice

./: .dockerignore  .env.example  .env.tests.example  .gitignore  Dockerfile  LICENSE  Makefile  alembic.ini  pyproject.toml  pytest.ini
docker_compose/: app.yaml  broker.yaml  storages.yaml  tests-broker.yaml  tests-storages.yaml  user-service.yaml  user_service.yaml
keys.example/: public.pem.example
src/application/api/: exception_handlers.py  main.py
src/application/api/users/: handlers.py  schemas.py
src/application/api/v1/users/: handlers.py  schemas.py
src/application/external_events/consumers/: base.py  rabbitmq.py
src/application/external_events/handlers/: base.py  users.py
src/domain/commands/: base.py  users.py
src/domain/entities/: base.py  users.py
src/domain/events/: users.py
src/domain/exceptions/: base.py  users.py
src/domain/value_objects/: base.py  users.py
src/infrastructure/: database.py  models.py
src/infrastructure/auth/: jwt.py  security.py  tokens.py
src/infrastructure/cache/: __init__.py  base.py  redis.py
src/infrastructure/converters/: users.py
src/infrastructure/exception/: base.py  users.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 1b2ae085be5f_.py  9bfe10130dc0_.py  9ff48858b9e6_.py  cb34e95a0044_.py  d7084039c05b_.py  e200f829ce53_.py
src/infrastructure/models/: users.py
src/infrastructure/producers/: base.py  rabbitmq.py
src/infrastructure/repositories/users/: base.py  postgresql.py
src/infrastructure/storages/: cache.py  database.py
src/infrastructure/storages/s3/: aws.py  base.py
src/infrastructure/storages/s3/clients/: aws.py  base.py
src/service/: container.py  message_bus.py  messagebus.py  services.py
src/service/exceptions/: base.py  users.py
src/service/handlers/command/: base.py  users.py
src/service/handlers/event/: base.py  users.py
src/service/units_of_work/users/: base.py  postgresql.py
src/settings/: config.py  container.py
tests/: config.py  conftest.py  fakes.py
tests/integration/application/external_events/consumers/: test_consumer.py
tests/integration/application/external_events/handlers/: test_handlers.py
tests/integration/infrastructure/auth/: test_jwt.py  test_tokens.py
tests/integration/infrastructure/cache/: test_cache.py
tests/integration/infrastructure/producers/: test_producer.py
tests/integration/infrastructure/repositories/users/: test_repository.py
tests/integration/infrastructure/storages/s3/: test_s3_client.py
tests/integration/service/handlers/command/: test_handlers.py
tests/integration/service/handlers/event/: test_handlers.py
tests/integration/service/units_of_work/users/: test_unit_of_work.py
tests/unit/application/external_events/handlers/: test_handlers.py
tests/unit/application/handlers/: test_external_event_handlers.py
tests/unit/domain/commands/: test_command.py  test_create_user_command.py
tests/unit/domain/entities/: test_users.py
tests/unit/domain/events/: test_event.py  test_user_created_event.py
tests/unit/domain/value_objects/: test_email_vo.py  test_name_vo.py  test_password_vo.py  test_phone_number_vo.py
tests/unit/service/: test_message_bus.py
tests/unit/service/handlers/command/: test_handlers.py
tests/unit/service/handlers/event/: test_handlers.py
