[project]
name = "UserService"
version = "0.1.0"
description = "User functionality related microservice."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aio-pika==9.5.5 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiobotocore==2.21.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiohappyeyeballs==2.6.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiohttp==3.11.18 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aioitertools==0.12.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiormq==6.8.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiosignal==1.3.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "alembic==1.15.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "annotated-types==0.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "anyio==4.8.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "asyncpg==0.30.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "attrs==25.3.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "botocore==1.37.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "botocore-stubs==1.38.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "certifi==2025.1.31 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "cffi==1.17.1 ; python_full_version >= '3.13' and python_full_version < '4.0' and platform_python_implementation != 'PyPy'",
    "click==8.1.8 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.13' and python_full_version < '4.0' and sys_platform == 'win32'",
    "cryptography==44.0.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "exceptiongroup==1.2.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "fastapi==0.115.11 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "frozenlist==1.6.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "greenlet==3.1.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "h11==0.14.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "httpcore==1.0.8 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "httpx==0.28.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "idna==3.10 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "iniconfig==2.0.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "jmespath==1.0.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "mako==1.3.9 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "markupsafe==3.0.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "multidict==6.2.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "orjson==3.10.16 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "packaging==24.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pamqp==3.3.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pluggy==1.5.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "propcache==0.3.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "psycopg2-binary==2.9.10 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "punq==0.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pycparser==2.22 ; python_full_version >= '3.13' and python_full_version < '4.0' and platform_python_implementation != 'PyPy'",
    "pydantic==2.10.6 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pydantic-core==2.27.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pydantic-settings==2.8.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pyjwt==2.10.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pytest==8.3.5 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pytest-asyncio==1.0.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "python-dotenv==1.0.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "python-multipart==0.0.20 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "redis==5.2.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "six==1.17.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "sniffio==1.3.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "sqlalchemy==2.0.39 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "starlette==0.46.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "types-aiobotocore==2.21.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "types-aiobotocore-full==2.21.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "types-awscrt==0.26.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "urllib3==2.4.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "uvicorn==0.34.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "wrapt==1.17.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "yarl==1.18.3 ; python_full_version >= '3.13' and python_full_version < '4.0'",
]
